slight tweaks to website

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -128,8 +128,8 @@
      <h1 class="f3 mt0 mb2 lh-title fw4"></h1>
       
     </header>
-      <p class="f6 lh-copy mv2 flex-auto"><h1 id="courses-served-as-teaching-assistant-at-penn">Courses served as teaching assistant at Penn
-  <a href="#courses-served-as-teaching-assistant-at-penn"></a>
+      <p class="f6 lh-copy mv2 flex-auto"><h1 id="teaching-assistant-at-penn">Teaching assistant at Penn
+  <a href="#teaching-assistant-at-penn"></a>
 </h1>
 <ul>
 <li>
@@ -149,12 +149,12 @@ Taught by Darin Kapanjie</p>
 Taught by Shuva Gupta</p>
 </li>
 <li>
-<p><strong>STAT 111: Introductory Statistics, Fall ’20, Spring ’21 – Undergraduate Level</strong><br>
+<p><strong>STAT 111: Introductory Statistics, Fall ’20, Spring ’21 – Undergraduate Level (Grader)</strong><br>
 Taught by Warren Ewens</p>
 </li>
 </ul>
-<h1 id="courses-served-as-teaching-assistant-at-hopkins">Courses served as teaching assistant at Hopkins
-  <a href="#courses-served-as-teaching-assistant-at-hopkins"></a>
+<h1 id="teaching-assistant-at-hopkins">Teaching assistant at Hopkins
+  <a href="#teaching-assistant-at-hopkins"></a>
 </h1>
 <ul>
 <li>
