--- a/research/index.html
+++ b/research/index.html
@@ -128,8 +128,19 @@
      <h1 class="f3 mt0 mb2 lh-title fw4"></h1>
       
     </header>
-      <p class="f6 lh-copy mv2 flex-auto"><h1 id="statistics">Statistics
-  <a href="#statistics"></a>
+      <p class="f6 lh-copy mv2 flex-auto"><h1 id="research-interests">Research interests
+  <a href="#research-interests"></a>
+</h1>
+<ul>
+<li>
+<p><strong>Causal inference</strong></p>
+</li>
+<li>
+<p><strong>Conditional independence testing/variable selection</strong></p>
+</li>
+</ul>
+<h1 id="statistics-span-stylefont-size-06em-equal-contributionspan">Statistics <span style="font-size: 0.6em;">(* equal contribution)</span>
+  <a href="#statistics-span-stylefont-size-06em-equal-contributionspan"></a>
 </h1>
 <ul>
 <li>
