--- a/404.html
+++ b/404.html
@@ -31,16 +31,16 @@
 <meta property="og:title" content="404 Page not found | Jeff Zhang">
 <meta property="og:description" content="A modern, beautiful, and easily configurable blog theme for Hugo." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://jzhang1937.github.io/404.html" />
+<meta property="og:url" content="https://jzhang1937.github.io/404.html" />
 <meta property="og:locale" content="en">
 
 
 
 
     
-        <meta property="og:image" content="http://jzhang1937.github.io/img/papillons.jpg" >
+        <meta property="og:image" content="https://jzhang1937.github.io/img/papillons.jpg" >
         <meta property="twitter:card" content="summary_large_image">
-        <meta name="twitter:image" content="http://jzhang1937.github.io/img/papillons.jpg" >
+        <meta name="twitter:image" content="https://jzhang1937.github.io/img/papillons.jpg" >
     
   
   <meta itemprop="name" content="404 Page not found">
