--- a/contributors/index.html
+++ b/contributors/index.html
@@ -31,16 +31,16 @@
 <meta property="og:title" content="Contributors | Jeff Zhang">
 <meta property="og:description" content="Thank you to all the contributors!" />
 <meta property="og:type" content="page" />
-<meta property="og:url" content="http://jzhang1937.github.io/contributors/" />
+<meta property="og:url" content="https://jzhang1937.github.io/contributors/" />
 <meta property="og:locale" content="en">
 
 
 
 
     
-        <meta property="og:image" content="http://jzhang1937.github.io/img/papillons.jpg" >
+        <meta property="og:image" content="https://jzhang1937.github.io/img/papillons.jpg" >
         <meta property="twitter:card" content="summary_large_image">
-        <meta name="twitter:image" content="http://jzhang1937.github.io/img/papillons.jpg" >
+        <meta name="twitter:image" content="https://jzhang1937.github.io/img/papillons.jpg" >
     
   
   <meta itemprop="name" content="Contributors">
