--- a/elements/index.html
+++ b/elements/index.html
@@ -31,16 +31,16 @@
 <meta property="og:title" content="Typography Styles &amp; Element Examples | Jeff Zhang">
 <meta property="og:description" content="The &#34;kitchen sink,&#34; if you will ... a page showing examples of type and page elements included in this template." />
 <meta property="og:type" content="page" />
-<meta property="og:url" content="http://jzhang1937.github.io/elements/" />
+<meta property="og:url" content="https://jzhang1937.github.io/elements/" />
 <meta property="og:locale" content="en">
 
 
 
 
     
-        <meta property="og:image" content="http://jzhang1937.github.io/img/papillons.jpg" >
+        <meta property="og:image" content="https://jzhang1937.github.io/img/papillons.jpg" >
         <meta property="twitter:card" content="summary_large_image">
-        <meta name="twitter:image" content="http://jzhang1937.github.io/img/papillons.jpg" >
+        <meta name="twitter:image" content="https://jzhang1937.github.io/img/papillons.jpg" >
     
   
   <meta itemprop="name" content="Typography Styles & Element Examples">
