--- a/research/index.html
+++ b/research/index.html
@@ -160,7 +160,7 @@ Preprint. <br>
 <p><strong>Randomization-Based Inference for Average Treatment Effects in Inexactly Matched Observational Studies</strong><br>
 Jianan Zhu, Jeffrey Zhang, Zijian Guo, and Siyu Heng <br>
 Preprint. <br>
-<a href="https://arxiv.org/pdf/2308.02005" target="_blank" class="link dim">
+<a href="https://arxiv.org/abs/2308.02005" target="_blank" class="link dim">
 <i class="fas fa-file-alt" style="color: red;"></i> Paper
 </a></p>
 </li>
@@ -168,7 +168,7 @@ Preprint. <br>
 <p><strong>A Differential Effect Approach to Partial Identification of Treatment Effects</strong><br>
 Kan Chen, Jeffrey Zhang, Bingkai Wang, and Dylan Small <br>
 Preprint. <br>
-<a href="https://arxiv.org/pdf/2303.06332" target="_blank" class="link dim">
+<a href="https://arxiv.org/abs/2303.06332" target="_blank" class="link dim">
 <i class="fas fa-file-alt" style="color: red;"></i> Paper
 </a></p>
 </li>
